fix navbar on mobile

--- a/src/components/navBar/nav.css
+++ b/src/components/navBar/nav.css
@@ -71,7 +71,7 @@
 
     .nav-menu {
       position: absolute;
-      top: 165px;
+      /* top: 165px; */
       left: 0px;
       flex-direction: column;
       width: 100%;
@@ -98,7 +98,8 @@
         text-align: center;
         padding: 0.5rem;
         border-radius: 4px;
-        width: 80%;
+        width: 100%;
+        
     }
     .navbar-logo {
         position: absolute;
